--- a/app/assets/stylesheets/brilliantech.base.css
+++ b/app/assets/stylesheets/brilliantech.base.css
@@ -1,3 +1,4 @@
+/********************************全局layout*****************************/
 @font-face {
     font-family:"Open Sans";
     src: url("OpenSans-Regular.eot");
@@ -10,7 +11,7 @@
 body{
     background-color:#F4F4F4;
     height:100%;
-    font-family:'Open Sans','Calibri','Arial',sans-serif;
+    /*font-family:'Open Sans','Calibri','Arial',sans-serif;*/
     line-height:28px;
     cursor:default;
     color:#555;
@@ -26,6 +27,14 @@ label{
 text-center{
     align:center;
 }
+/********************************  控件   *****************************/
+.tooltip{
+    font-size:14px !important;
+    opacity:1 !important;
+}
+/*.tooltip-inner{*/
+    /*color:#1abc9c !important;*/
+/*}*/
 .badge{
     padding-left:5px;
     padding-right:5px;
@@ -78,7 +87,7 @@ a:hover,a:focus{
     background-color:#5DADE2 !important;
 }
 .btn.btn-success{
-    background-color:#1abc9c !important;
+    background-color:#1abc9c ;
     color:white;
     box-shadow:0 2px 0px #16a085;
     -moz-box-shadow:0 2px 0px #16a085;
@@ -86,6 +95,9 @@ a:hover,a:focus{
 }
 .btn.btn-success:hover{
     background-color:#2FE2BF ;
+    box-shadow:0 2px 0px #1abc9c;
+    -moz-box-shadow:0 2px 0px #1abc9c;
+    -webkit-box-shadow:0 2px 0px #1abc9c;
 }
 .btn.btn-warning{
     background-color:#F39C12 ;
