--- a/app/assets/stylesheets/brilliantech.railsepm.css
+++ b/app/assets/stylesheets/brilliantech.railsepm.css
@@ -145,17 +145,59 @@ ul.setting-navi>li>a{
 }
 /***************************************************** middle **************************************************************/
 .left-category{
-    width:150px;
+    width:200px;
     height:600px;
+    border-right:1px solid #ddd;
 }
 .right-content{
     height:600px;
 }
+/***************************************************** content condition **************************************************************/
+.content-condition{
+    width:700px;
+    margin:30px auto 0;
+}
+.content-condition-part{
+    width:250px;
+}
+.content-condition-part>p{
+    margin-bottom:10px;
+    font-size:21px;
+}
+.content-condition-part>select{
+    margin-bottom:2px;
+    width:260px;
+    height:35px;
+    padding:7px 6px ;
+    font-size:15px;
+    text-overflow:ellipsis;
+}
+.content-condition-part>label{
+    margin:4px 0 6px;
+    font-size:15px;
+    display:block;
+    text-align:center;
+    color:#9eb7c6;
+}
+.content-condition-part.content-condition-rightpart{
+    width:390px;
+}
+.content-condition-rightpart>input{
+    width:150px;
+    margin-left:10px;
+    margin-right:10px;
+    margin-bottom:2px;
+    font-size:15px;
+    height:18px;
+    padding:7px 6px;
+    cursor:default;
+    background-color:white !important;
+}
 /***************************************************** chart **************************************************************/
 .analyze-chart{
-   width:100%;
-   height:500px;
-
+   width:70%;
+   margin:25px auto;
+   height:350px;
 }
 /***************************************************** bottom **************************************************************/
 .page-bottom{
