--- a/app/assets/stylesheets/brilliantech.base.css
+++ b/app/assets/stylesheets/brilliantech.base.css
@@ -12,6 +12,7 @@ body{
     background-color:#F4F4F4;
     height:100%;
     /*font-family:'Open Sans','Calibri','Arial',sans-serif;*/
+    font-family:"微软雅黑",'Arial';
     line-height:28px;
     cursor:default;
     color:#555;
@@ -77,7 +78,7 @@ a:hover,a:focus{
     padding:3px 6px 0px
 }
 .btn.btn-primary{
-    background-color:#3498db !important;
+    background-color:#3498db;
     box-shadow:0 2px 0px #2980b9;
     -moz-box-shadow:0 2px 0px #2980b9;
     -webkit-box-shadow:0 2px 0px #2980b9;
