--- a/app/assets/stylesheets/brilliantech.railsepm.css
+++ b/app/assets/stylesheets/brilliantech.railsepm.css
@@ -81,18 +81,17 @@ ul.setting-navi>li>a{
     list-style: none;
     display:block;
     margin:0;
-    padding:20px 0 16px;
-
+    padding:13px 0 9px;
 }
 .main-navi>li{
     display:inline;
 }
 .main-navi>li>a{
     color:#333;
-    font-size:21px;
-    font-weight:lighter;
+    font-size:16px;
+    font-weight:500;
     letter-spacing:2px;
-    padding:19px 14px 21px;
+    padding:17px 14px 13px;
     border-left:1px solid white;
     border-right:1px solid white;
 }
@@ -119,9 +118,14 @@ ul.setting-navi>li>a{
 }
 .btn.btn-navi{
     font-size:17px;
-    padding:10px 42px 11px;
+    padding:8px 38px 8px;
     margin-right:20px;
-    margin-top:9px;
+    margin-top:5px;
+}
+b.caret{
+    position:relative;
+    top:5px;
+    left:2px;
 }
 /***************************************************** sub-middle **************************************************************/
 .sub-middle{
@@ -132,7 +136,7 @@ ul.setting-navi>li>a{
 }
 .sub-middle-tool{
     margin-right:21px;
-    margin-top:5px;
+    margin-top:3px;
 }
 .sub-middle-tool>a{
     color:black;
@@ -140,10 +144,18 @@ ul.setting-navi>li>a{
     margin-left:15px;
     cursor:pointer
 }
+.sub-middle-tool>a>i{
+    position:relative;
+    top:2px;
+}
 .sub-middle-tool>a:hover{
     color:#3498db
 }
 /***************************************************** middle **************************************************************/
+.middle{
+    padding-bottom:50px;
+    padding-top:2px;
+}
 .left-category{
     width:200px;
     height:600px;
@@ -155,7 +167,7 @@ ul.setting-navi>li>a{
 /***************************************************** content condition **************************************************************/
 .content-condition{
     width:700px;
-    margin:30px auto 0;
+    margin:30px auto ;
 }
 .content-condition-part{
     width:250px;
@@ -194,9 +206,27 @@ ul.setting-navi>li>a{
     background-color:white !important;
 }
 /***************************************************** chart **************************************************************/
+.control-chart{
+    width:70%;
+    margin:0px auto;
+    height:45px;
+    background:white;
+}
+.btn.control-chart-btn{
+    margin-left:10px;
+    margin-top:9px;
+    padding:2px 10px;
+}
+.control-chart-btn.control-chart-btn-last{
+    margin-right:38px;
+    padding:2px 12px;
+}
+.btn.control-chart-btn.control-btn-active{
+    background-color:#5DADE2;
+}
 .analyze-chart{
    width:70%;
-   margin:25px auto;
+   margin:0px auto;
    height:350px;
 }
 /***************************************************** bottom **************************************************************/
