--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,9 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
- *= require_tree .
+ *= require jquery-ui-1.10.3.custom.min
+ *= require bootstrap.min
+*= require brilliantech.base
+*= require brilliantech.railsepm
+*= require_self
  */
