--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -1,5 +1,5 @@
 <div class="page-top">
-     <img src="assets/headicon.png"/>
+     <img src="../assets/headicon.png"/>
      <label class="company-name">BrillianTech</label>
      <div class="top-tool pull-right">
           <a class="tool-setting" data-placement="bottom" data-animation=false id="tool-setting" title="设置" > </a>
@@ -25,7 +25,7 @@
                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 管理<b class="caret"></b> </a>
                <ul class="dropdown-menu">
                     <li>
-                         <a class="main-navi-dropitem" href="">KPI</a>
+                         <a class="main-navi-dropitem" href="../kpis">KPI</a>
                     </li>
                     <li>
                          <a class="main-navi-dropitem" href="../users">用户</a>
