--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,79 +1,29 @@
 <div class="sub-middle sub-middle-manage">
      <h3 class="text-center">管理我的用户 </h3>
-
 </div>
 <div class="middle clearfix">
      <%= render :partial=>'entities/left_menu'%>
-     <div class="addBlock" id="addBlock" data-state="off" style="display:none">
-          <h4 class="text-center normal-blue" id="add-block-mark">添加新的KPI</h4>
-          <div class="wrap-add-manage clearfix">
-               <table class="wrap-add-manage-left pull-left" >
-                    <tr>
-                         <td align="right" valign="top">*姓名</td>
-                         <td>
-                         <input type="text" id="new-user-name"/>
-                         </td>
-                    </tr>
-                    <tr>
-                         <td align="right" valign="top">*邮箱</td>
-                         <td>
-                         <input type="text" id="new-user-mail"/>
-                         </td>
-                    </tr>
-                    <tr>
-                         <td align="right" valign="top">*组</td>
-                         <td>
-                         <select id="new-user-entity">
-                              <option data-order="1" selected="selected">entity1</option>
-                              <option data-order="2">entity2</option>
-                              <option data-order="3">entity3</option>
-                         </select></td>
-                    </tr>
-                    <tr>
-                         <td align="right" valign="top">*角色</td>
-                         <td>
-                         <select id="new-user-role">
-                              <option data-order="1" selected="selected">管理员</option>
-                              <option data-order="2">用户</option>
-                              <option data-order="3">观察者</option>
-                         </select></td>
-                    </tr>
-               </table>
-               <div class="wrap-add-manage-right pull-right">
-                    <button class="add-manage-kpi btn  btn-success" id="add-manage-user" onclick="add_user()">
-                         添加
-                    </button>
-                    <button class="cancel-manage-kpi btn " onclick="cancel_add_user()">
-                         取消
-                    </button>
-               </div>
-          </div>
-          <p class="text-center light-orange hide" id="add-warn">
-               请填写所有带*的选项
-          </p>
-     </div>
-
      <div class="right-content pull-left" id="right-content">
           <table class="manage-kpi" id="user-table">
                <tr>
                     <th>ID</th>
                     <th>姓名</th>
                     <th min-width="221px">邮箱</th>
-                    <th>组</th>
                     <th>角色</th>
                     <th width="100px" colspan="2">操作</th>
                </tr>
-               <tr id="1">
-                    <td align="center" class="kpi-order-id">1</td>
-                    <td align="center" class="manage-userName">wayne</td>
-                    <td align="center" class="manage-userMail">zixiao.wang@cz-tek.com</td>
-                    <td align="center" class="manage-userEntity">entity1</td>
-                    <td align="center" class="manage-userRole">user</td>
-                    <td align="center"><div class="manage-operate manage-operate-edit" data-belong="1" onclick="edit_userItem(event)"></div><a class="btn btn-success manage-operate-reverse  hide" data-belong="1" onclick="finish_editUser(event)">完成</a></td>
-                    <td align="center"><div class="manage-operate manage-operate-del" data-belong="1" onclick="remove_userItem(event)"></div><a class="btn manage-operate-reverse  hide" id="cancel-edit-user" data-belong="1" onclick="cancel_editUser(event)">取消</a></td>
+               <%@users.each_with_index do |user,i|%>
+               <tr id="<%= user.id%>">
+                    <td align="center" class="kpi-order-id"><%= i+1%></td>
+                    <td align="center" class="manage-userName"><%= user.first_name%></td>
+                    <td align="center" class="manage-userMail"><%= user.email%></td>
+                    <td align="center" class="manage-userRole"><%= UsersHelper.get_user_role_display(user.role_id)%></td>
+                    <td align="center"><div class="manage-operate manage-operate-edit" data-belong="<%= user.id%>" onclick="edit_userItem(event)"></div><a class="btn btn-success manage-operate-reverse  hide" data-belong="<%= user.id%>" onclick="finish_editUser(event)">完成</a></td>
+                    <td align="center"><div class="manage-operate manage-operate-del" data-belong="<%= user.id%>" onclick="remove_userItem(event)"></div><a class="btn manage-operate-reverse  hide" id="cancel-edit-user" data-belong="<%= user.id%>" onclick="cancel_editUser(event)">取消</a></td>
                </tr>
+               <%end%>
           </table>
-          <a class="btn manage-add-btn btn-primary pull-right" onclick="show_addBlock(event)" data-manage="user">添加用户</a>
+          <a class="btn manage-add-btn btn-primary pull-right" href="<%=new_user_path%>"  data-manage="user">添加用户</a>
      </div>
 </div>
 
