--- a/app/assets/stylesheets/brilliantech.railsepm.css
+++ b/app/assets/stylesheets/brilliantech.railsepm.css
@@ -183,7 +183,7 @@ b.caret{
 /*content control*/
 .content-condition{
     width:750px;
-    margin:30px auto ;
+    margin:30px auto 50px;
 }
 .content-condition-part{
     width:310px;
@@ -233,7 +233,7 @@ b.caret{
 /*chart*/
 .control-chart{
     width:70%;
-    margin:0px auto;
+    margin:0 auto;
     height:45px;
     background:white;
 }
@@ -263,6 +263,10 @@ box-shadow:0 2px 0px #F39C12;
    width:70%;
    margin:0px auto;
    height:350px;
+}
+.btn.analyze-btn{
+    margin-right:20px;
+    margin-top:5px;
 }
 /***************************************************** dashboard **************************************************************/
 /*sub middle*/
@@ -374,8 +378,8 @@ ul.manage-group>li.active>a{
     width:30px;
     height:30px;
     background-repeat:no-repeat;
-    background-image:url("../images/manage-operate.png");
-    /*background-image:url("/assets/manage-operate.png");*/
+    /*background-image:url("../images/manage-operate.png");*/
+    background-image:url("/assets/manage-operate.png");
     cursor:pointer;
 }
 .manage-operate-edit{
@@ -483,6 +487,11 @@ select.calcuRelate-kpi{
 .calcuType-clear{
     margin-top:24px;
     margin-left:9px;
+}
+.calcuInput-mark{
+    position:relative;
+    left:-225px;
+    top:33px;
 }
 /*************************    user     ******************************/
 .edit-userTarget-input{
