--- a/app/views/kpis/_new.html.erb
+++ b/app/views/kpis/_new.html.erb
@@ -46,8 +46,9 @@
                          <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="2" onclick="select_calcuMethod(event)">-</a>
                          <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="3" onclick="select_calcuMethod(event)">x</a>
                          <a class="pull-left btn btn-primary calcuType-method-btn" data-calcuType="4" onclick="select_calcuMethod(event)">%</a>
-                         <input type="text" class="calcuType-input" id="calcuType-input" readonly="true"/>
+                         <span class="calcuInput-mark">*</span><input type="text" class="calcuType-input" id="calcuType-input" readonly="true"/>
                          <a class="btn calcuType-clear" id="calcuType-clear" onclick="calcuRelate_clear()">清空</a>
+                         <div style="display:none" id="takeCal" cal></div>
                     </div></td>
                </tr>
           </table>
